feat :: Order Page implemented !!

--- a/admin/index.html
+++ b/admin/index.html
@@ -15,7 +15,7 @@
     />
     <!-- front -->
 
-    <title>E-medecine Admin</title>
+    <title>E-Care Admin</title>
   </head>
   <body>
     <div id="root"></div>
